--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- ALLOWS APP NOT TO SLEEP WHILE RUNNING -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" /> 
     <application
         android:label="cyclock"
         android:name="${applicationName}"
