--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.2.2
   file_picker: ^5.5.0
   liquid_progress_indicator_v2: ^0.5.0
+  wakelock_plus: ^1.1.0 # Helps to keep android awake
 
 dev_dependencies:
   flutter_test:
