--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   circular_countdown_timer: ^0.2.4
   provider: ^6.0.5
   shared_preferences: ^2.2.2
-  file_picker: ^5.5.0
+  # file_picker: ^5.5.0
   liquid_progress_indicator_v2: ^0.5.0
   timezone: ^0.9.2
   wakelock_plus: ^1.1.0 # Helps to keep android awake
